--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="img/logo.png" alt="DragonStone Logo" />
       </div>
       <div class="search-bar">
-        <input type="text" placeholder="Search eco-friendly products...">
+        <input type="text" placeholder="search eco-friendly products...">
         <!-- SVG search button -->
         <button aria-label="Search">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -43,13 +43,13 @@
     <nav class="header-bottom">
       <div class="menu-toggle">☰ Shop All</div>
       <ul class="nav-links">
-        <li><a href="#">Cleaning & Household Supplies</a></li>
-        <li><a href="#">Kitchen & Dining</a></li>
-        <li><a href="#">Home Décor & Living</a></li>
-        <li><a href="#">Bathroom & Personal Care</a></li>
-        <li><a href="#">Lifestyle & Wellness</a></li>
-        <li><a href="#">Kids & Pets</a></li>
-        <li><a href="#">Outdoor & Garden</a></li>
+        <li><a href="supplies.html">Cleaning & Household Supplies</a></li>
+        <li><a href="kitchen.html">Kitchen & Dining</a></li>
+        <li><a href="decor.html">Home Décor & Living</a></li>
+        <li><a href="bathroom.html">Bathroom & Personal Care</a></li>
+        <li><a href="#lifestyle.html">Lifestyle & Wellness</a></li>
+        <li><a href="kids.html">Kids & Pets</a></li>
+        <li><a href="outdoor.html">Outdoor & Garden</a></li>
       </ul>
     </nav>
   </header>
